--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container-cadastro">
-        <img src="images/logo_sabor_brasil.jpg" alt="Logo Pet do Brasil" width="180">
-        <h2>Cadastro de Tutor</h2>
+        <img src="images/logo_sabor_brasil.jpg" alt="Logo Post do Brasil" width="180">
+        <h2>Cadastro Usuario</h2>
         <form id="form-cadastro">
             <input type="text" id="nome-cadastro" class="input-cadastro" placeholder="Nome Completo" required>
             <input type="email" id="email-cadastro" class="input-cadastro" placeholder="E-mail" required>
@@ -23,7 +23,7 @@
     </div>
 
     <footer>
-        <p>Pet do Brasil</p>
+        <p>Post do Brasil</p>
         <p class="social">
             <img src="images/Instagram.svg" alt="Instagram" width="20px">
             <img src="images/Twitter.svg" alt="Twitter" width="20px">
