--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -21,11 +21,11 @@
             <h2>Publicações</h2>
             <!-- Os posts serão carregados dinamicamente aqui -->
         </main>
-
+ <!--LOGIN-->
         <aside class="login">
             <button id="btn-login">Login</button>
             <button id="btn-ir-cadastro">Cadastre-se</button>
-            <button id="btn-cadastrar-pet" style="display: none;">Adicionar Publicação</button>
+            <button id="btn-criar-post" style="display: none;">Adicionar Publicação</button>
             <button id="btn-minhas-publicacoes" style="display: none;">Minhas Publicações</button>
         </aside>
     </div>
@@ -53,29 +53,29 @@
         </div>
     </div>
 
-    <!-- Modal de Cadastro de Pet -->
-    <div class="modal-cadastrar-pet" id="modal-cadastrar-pet" style="display: none;">
+    <!-- Modal de Criar Post -->
+    <div class="modal-cadastrar-post" id="modal-cadastrar-post" style="display: none;">
         <div class="modal-conteudo">
             <h2>Adicionar Publicação</h2>
-            <input type="file" id="foto-pet" accept="image/*" required>
-            <input type="text" id="nome-pet" placeholder="Nome da Postagem" required>
-            <input type="text" id="local-pet" placeholder="Legenda" required>
-            <input type="text" id="cidade-pet" placeholder="Localização" required>
-            <button id="btn-cancelar-pet">Cancelar</button>
-            <button id="btn-salvar-pet">Salvar</button>
-            <p class="mensagem-erro" id="mensagem-erro-pet"></p>
+            <input type="file" id="foto-post" accept="image/*" required>
+            <input type="text" id="nome-post" placeholder="Nome da Postagem" required>
+            <input type="text" id="local-post" placeholder="Legenda" required>
+            <input type="text" id="cidade-post" placeholder="Localização" required>
+            <button id="btn-cancelar-post">Cancelar</button>
+            <button id="btn-salvar-post">Salvar</button>
+            <p class="mensagem-erro" id="mensagem-erro-post"></p>
         </div>
     </div>
 
-    <!-- Modal de Edição de Pet -->
-    <div class="modal-editar-pet" id="modal-editar-pet" style="display: none;">
+    <!-- Modal de Edição de Post -->
+    <div class="modal-editar-post" id="modal-editar-post" style="display: none;">
         <div class="modal-conteudo">
-            <h2>Editar Pet</h2>
-            <input type="file" id="foto-pet-editar" accept="image/*">
-            <input type="file" id="foto-pet" accept="image/*" required>
-            <input type="text" id="nome-pet" placeholder="Nome da Postagem" required>
-            <input type="text" id="local-pet" placeholder="Legenda" required>
-            <input type="text" id="cidade-pet" placeholder="Localização" required>
+            <h2>Editar Post</h2>
+            <input type="file" id="foto-post-editar" accept="image/*">
+            <input type="file" id="foto-post" accept="image/*" required>
+            <input type="text" id="nome-post" placeholder="Nome da Postagem" required>
+            <input type="text" id="local-post" placeholder="Legenda" required>
+            <input type="text" id="cidade-post" placeholder="Localização" required>
             <button id="btn-cancelar-editar">Cancelar</button>
             <button id="btn-salvar-editar">Salvar</button>
             <p class="mensagem-erro" id="mensagem-erro-editar"></p>
