--- a/public/minhas-publicacoes.html
+++ b/public/minhas-publicacoes.html
@@ -25,14 +25,14 @@
         <aside class="login">
             <button id="btn-login">Login</button>
             <button id="btn-ir-cadastro">Cadastre-se</button>
-            <button id="btn-cadastrar-pet" style="display: none;">Adicionar Publicação</button>
+            <button id="btn-cadastrar-post" style="display: none;">Adicionar Publicação</button>
             <button id="btn-minhas-publicacoes" style="display: none;">Minhas Publicações</button>
             <button id="btn-voltar-inicial" style="display: none;">Voltar à Página Inicial</button>
         </aside>
     </div>
 
     <footer>
-        <p>Pet do Brasil</p>
+        <p>Post do Brasil</p>
         <p class="social">
             <img src="images/Instagram.svg" alt="Instagram" width="20px">
             <img src="images/Twitter.svg" alt="Twitter" width="20px">
@@ -43,14 +43,15 @@
     </footer>
 
     <!-- Modal de Edição de Post -->
-    <div class="modal-editar-pet" id="modal-editar-pet" style="display: none;">
+
+    <div class="modal-editar-post" id="modal-editar-post" style="display: none;">
         <div class="modal-conteudo">
-            <h2>Editar Pet</h2>
-            <input type="file" id="foto-pet-editar" accept="image/*">
-            <input type="file" id="foto-pet" accept="image/*" required>
-            <input type="text" id="nome-pet" placeholder="Nome da Postagem" required>
-            <input type="text" id="local-pet" placeholder="Legenda" required>
-            <input type="text" id="cidade-pet" placeholder="Localização" required>
+            <h2>Editar Post</h2>
+            <input type="file" id="foto-post-editar" accept="image/*">
+            <input type="file" id="foto-post" accept="image/*" required>
+            <input type="text" id="nome-post" placeholder="Nome da Postagem" required>
+            <input type="text" id="local-post" placeholder="Legenda" required>
+            <input type="text" id="cidade-post" placeholder="Localização" required>
             <button id="btn-cancelar-editar">Cancelar</button>
             <button id="btn-salvar-editar">Salvar</button>
             <p class="mensagem-erro" id="mensagem-erro-editar"></p>
@@ -60,4 +61,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
